--- a/css/style.css
+++ b/css/style.css
@@ -210,14 +210,17 @@ footer {
     header .menu {
         flex-direction: column;
         align-items: center;
+        display: none; /* O menu estará escondido inicialmente */
+        width: 100%;
+        text-align: center;
+        background-color: #333;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        padding: 20px 0;
     }
 
-    header .menu li {
-        margin-left: 0;
-        margin-bottom: 10px;
-    }
-
-    /* Ajustes para o Menu Hambúrguer */
+    /* Exibindo o menu hambúrguer */
     header .hamburger {
         display: flex;
         flex-direction: column;
@@ -234,19 +237,7 @@ footer {
         background-color: #fff;
     }
 
-    /* Ocultar o menu na versão mobile */
-    header .menu {
-        display: none;
-        width: 100%;
-        text-align: center;
-        position: absolute;
-        top: 50px;
-        left: 0;
-        background-color: #333;
-        padding: 20px 0;
-    }
-
-    /* Mostrar o menu quando ativado */
+    /* Exibindo o menu ao clicar no hambúrguer */
     header .menu.active {
         display: block;
     }
@@ -254,5 +245,27 @@ footer {
     /* Ajuste no item do menu */
     header .menu li {
         margin: 10px 0;
+    }
+
+    /* Ajustando a largura e layout da seção intro */
+    .intro {
+        flex-direction: column; /* Coloca a imagem e o texto em uma coluna */
+        gap: 10px;
+        padding: 20px;
+    }
+
+    /* Ajustando o tamanho da imagem na versão móvel */
+    .intro-img {
+        width: 100%;
+        max-width: 300px;
+        height: auto;
+    }
+
+    .intro-text h2 {
+        font-size: 1.2em;
+    }
+
+    .intro-text h3.highlight {
+        font-size: 1.5em;
     }
 }
